--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "open-im-sdk": "2.3.0-beta.2",
+    "tdesign-miniprogram": "^1.1.12"
+  }
 }
